<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menumain_addTask"/>
    <string name="menumaein_showDurations">Durations Report</string>
    <string name="menumain_settings">Settings</string>
    <string name="menutitle_showAbout">About TaskTimer</string>
    <string name="menutitle_generate">Generate data</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="edit_button_description">Button to edit a tasks detail</string>
    <string name="delete_button_description">Button to delete task</string>
    <string name="addedit_name_hint">Task name: required</string>
    <string name="addedit_description">Task description: optional</string>
    <string name="addedit_sort_hint">Order: sorts low to high</string>
    <string name="addedit_save_text">SAVE</string>
</resources>